--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 {% block content %}
 
     <div class="form-group">
-        <form action="/success" method="post" enctype="multipart/form-data">
+        <form action="/" method="post" enctype="multipart/form-data">
             <label for="file-upload-form">Upload your, hopefully-not ;-), malicious file</label>
             <input type="file" class="form-control-file" id="file-upload-form" name="file"/>
             <input type="submit" value="Upload">
