--- a/templates/uploads.html
+++ b/templates/uploads.html
@@ -7,7 +7,7 @@
     <ul class="list-group list-group-flush">
         {% for filename in list_of_files %}
 
-            <li class="list-group-item"></li>
+            <li class="list-group-item">{{ filename }}</li>
         {% endfor %}
     </ul>
 
