--- a/templates/uploads.html
+++ b/templates/uploads.html
@@ -8,7 +8,7 @@
 
     <ul class="list-group list-group-flush">
         {% for filename in list_of_files %}
-            <li class="list-group-item">{{ filename }}</li>
+            <li class="list-group-item"><a href="{{ url_for('list_uploaded_files') }}/{{ filename }}">{{ filename }}</a></li>
         {% endfor %}
     </ul>
 
