Added navbar links

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,14 +13,14 @@
 <body>
 <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">ZERO-DAY-ZAPPER</a>
+        <a class="navbar-brand" href="{{ url_for('upload_file') }}">ZERO-DAY-ZAPPER</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="#">Home</a>
+                <a class="nav-item nav-link active" href="{{ url_for('upload_file') }}">Home</a>
                 <a class="nav-item nav-link" href="#">Uploads</a>
                 <a class="nav-item nav-link" href="#">Link 2</a>
                 <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled Link</a>
