--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
                 <a class="nav-item nav-link active" href="{{ url_for('upload_file') }}">Home</a>
-                <a class="nav-item nav-link" href="#">Uploads</a>
+                <a class="nav-item nav-link" href="{{ url_for('list_uploaded_files') }}">Uploads</a>
                 <a class="nav-item nav-link" href="#">Link 2</a>
                 <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled Link</a>
             </div>
