Added tidy files button

--- a/templates/uploads.html
+++ b/templates/uploads.html
@@ -6,6 +6,8 @@
 
     <h2>Here are the current list of files that have been uploaded</h2>
 
+    <a href="{{ url_for('tidy_files') }}" class="btn"></a>
+
     <ul class="list-group list-group-flush">
         {% for filename in list_of_files %}
             <li class="list-group-item"><a href="{{ url_for('list_uploaded_files') }}/{{ filename }}">{{ filename }}</a></li>
