--- a/templates/uploads.html
+++ b/templates/uploads.html
@@ -6,7 +6,7 @@
 
     <h2>Here are the current list of files that have been uploaded</h2>
 
-    <a href="{{ url_for('tidy_files') }}" class="btn"></a>
+    <a href="{{ url_for('tidy_files') }}" class="btn btn-primary">Tidy Files</a>
 
     <ul class="list-group list-group-flush">
         {% for filename in list_of_files %}
