--- a/templates/index.html
+++ b/templates/index.html
@@ -4,12 +4,17 @@
 
 {% block content %}
 
-    <div class="form-group">
-        <form action="/" method="post" enctype="multipart/form-data">
-            <label for="file-upload-form">Upload your, hopefully-not ;-), malicious file</label>
-            <input type="file" class="form-control-file" id="file-upload-form" name="file"/>
-            <input type="submit" value="Upload">
-        </form>
+    <div class="row">
+        <div class="col-12">
+            <h2>Manually Upload a File</h2>
+            <form action="/" method="post" enctype="multipart/form-data">
+                <div class="form-group">
+                    <label for="file-upload-form">Upload your malicious (or not!) file!</label>
+                    <input type="file" class="form-control-file" id="file-upload-form" name="file"/>
+                    <button type="submit" class="btn btn-success mt-2">Upload</button>
+                </div>
+            </form>
+        </div>
     </div>
 
 {% endblock %}
