Formatting update and added flash messages

--- a/templates/base.html
+++ b/templates/base.html
@@ -20,8 +20,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="{{ url_for('upload_file') }}">Home</a>
-                <a class="nav-item nav-link" href="{{ url_for('list_uploaded_files') }}">Uploads</a>
+                <a class="nav-item nav-link active" href="{{ url_for('upload_file') }}">Control Panel</a>
+                <a class="nav-item nav-link" href="{{ url_for('list_uploaded_files') }}">Files</a>
             </div>
         </div>
     </nav>
