--- a/templates/uploads.html
+++ b/templates/uploads.html
@@ -8,6 +8,7 @@
     <br>
 
     <a href="{{ url_for('exe_files') }}" class="btn btn-primary" role="button">Add EXE to files</a>
+    <a href="{{ url_for('mutate_files') }}" class="btn btn-warning" role="button">Mutate all files</a>
     <a href="{{ url_for('delete_files') }}" class="btn btn-danger" role="button">Delete ALL files</a>
 
     <ul class="list-group list-group-flush">
