--- a/templates/uploads.html
+++ b/templates/uploads.html
@@ -9,6 +9,7 @@
 
     <div class="row">
         <div class="col-sm-12">
+            <a href="{{ url_for('vt_download') }}" class="btn btn-secondary" role="button">Download from VT!</a>
             <a href="{{ url_for('exe_files') }}" class="btn btn-primary" role="button">Add EXE to files</a>
             <a href="{{ url_for('mutate_files') }}" class="btn btn-warning" role="button">Mutate all files</a>
             <a href="{{ url_for('delete_files') }}" class="btn btn-danger" role="button">Delete ALL files</a>
