--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,9 @@
 <body>
 <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="{{ url_for('portal') }}">ZERO-DAY-ZAPPER</a>
+        <a class="navbar-brand" href="{{ url_for('portal') }}">
+            <img src="{{ url_for('static', filename='images/zdz-o.png') }}" alt="ZDZ logo" class="d-inline-block align-top" loading="lazy">
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
