--- a/templates/base.html
+++ b/templates/base.html
@@ -30,6 +30,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
+                <a class="nav-item nav-link" href="{{ url_for('why') }}">WTF?</a>
                 <a class="nav-item nav-link" href="{{ url_for('portal') }}">Portal</a>
                 <a class="nav-item nav-link" href="{{ url_for('upload_file') }}">Upload</a>
                 <a class="nav-item nav-link" href="{{ url_for('list_uploaded_files') }}">Files</a>
