--- a/templates/portal.html
+++ b/templates/portal.html
@@ -6,7 +6,7 @@
         <div class="col-12 text-center">
             <span>
                 <label for="fname">We're going to generate some brand new malware and a brand new malicious website!
-                    <a href="03.html" target="_blank">Why?</a>
+                    <a href="{{ url_for('why') }}" target="_blank">Why?</a>
                     <br>
                     <br>
                     <br>
